# EMToolKit

./: .buildinfo  .gitignore  .readthedocs.yml  Android_EMToolKit_Setup.html  CITATION.cff  CONTRIBUTING.md  DEVELOP.md  EMToolKit.algorithms.html  EMToolKit.examples.html  EMToolKit.html  EMToolKit.instruments.html  EMToolKit.schemas.html  EMToolKit.visualization.html  EMToolKit_example.ipynb  EMToolKit_example[70].ipynb  EMToolKit_example_07252010.ipynb  EMToolKit_example_multi_instrument.ipynb  EMToolKit_example_multi_instrument_downsampling.ipynb  EMToolKit_example_multi_instrument_matrix.ipynb  EMToolKit_example_single_instrument.ipynb  EMToolKit_top_example_07252010.ipynb  INSTALL.html  INSTALL.md  LICENSE  MANIFEST.in  NEW NOTEBOOK MULTITHING.ipynb  README.md  contribute.html  contribute.md  develop.html  develop.md  directory_structure.txt  environment.yml  environment.yml.bkk  environment.yml.bkk2  genindex.html  index.html  index_bkk.html  modules.html  objects.inv  (+9 more)
.auto_examples/: add_two.html  add_two.ipynb  index.html  sg_execution_times.html
.doctrees/: Android_EMToolKit_Setup.doctree  EMToolKit.algorithms.doctree  EMToolKit.doctree  EMToolKit.examples.doctree  EMToolKit.instruments.doctree  EMToolKit.schemas.doctree  EMToolKit.visualization.doctree  INSTALL.doctree  contribute.doctree  develop.doctree  environment.pickle  index.doctree  index_bkk.doctree  modules.doctree  setup.doctree  sg_execution_times.doctree
EMToolKit/: EMToolKit.py  __init__.py  __main__.py  examples.py  notebook_template.ipynb  notebook_template.json  util.py
_modules/: index.html
_sources/: EMToolKit.algorithms.rst.txt  EMToolKit.examples.rst.txt  EMToolKit.instruments.rst.txt  EMToolKit.rst.txt  EMToolKit.schemas.rst.txt  modules.rst.txt  sg_execution_times.rst.txt
_static/: resizing.css  run_notebooks.sh
api/: EMToolKit.EMToolKit.dem_model.html  EMToolKit.EMToolKit.em_collection.html  EMToolKit.EMToolKit.em_data.html  EMToolKit.algorithms.html  EMToolKit.algorithms.multi_inst_dem_wrapper.aia_color_table.html  EMToolKit.algorithms.multi_inst_dem_wrapper.multi_inst_simple_dem_wrapper.html  EMToolKit.algorithms.multi_inst_dem_wrapper.plot_reprojected.html  EMToolKit.algorithms.multi_inst_dem_wrapper.reproject_with_uncertainties.html  EMToolKit.algorithms.simple_reg_dem.simple_reg_dem.html  EMToolKit.algorithms.simple_reg_dem_parallel.precompute_matrices.html  EMToolKit.algorithms.sparse_em.simplex.html  (+75 more)
(+287 files in other folders)
