[project]
name = "EMToolKit"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "C. Gilly", email = "gilly@swri.org" },
    { name = "J. Plowman", email = "jplowman@boulder.swri.edu" }
]
dependencies = [
    "astropy>=6.0.1",
    "scipy>=1.13.1",
    "ipympl>=0.9.4",
    "ndcube>=2.2.2",
    "numba>=0.60.0",
    "xrtpy>=0.4.0",
    "sunpy>=5.1.5",
    "requests>=2.32.3",
    "bs4>=0.0.2",
    "lxml>=5.2.2",
    "zeep>=4.2.1",
    "drms>=0.7.1",
    "reproject>=0.13.0",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">= 3.9, <3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["EMToolKit"]
